crates/knotch-derive/tests/ui/workflow_missing_name.stderr
error: expected identifier
 --> tests/ui/workflow_missing_name.rs:4:20
  |
4 | #[workflow(phase = (), milestone = (), gate = ())]
  |                    ^^
